CHANGELOG RoundCube Webmail
---------------------------

2008/05/28 (alec)
----------
- Fixed sorting of folders with non-ascii characters

2008/05/21 (alec)
----------
- Localized pagetitle in Settings and Address Book

2008/05/19 (alec)
----------
- Fixed Mysql DDL for default identities creation (#1485070)

2008/05/16 (alec)
----------
- In Preferences added possibility to configure 'read_when_deleted',
  'mdn_requests', 'flag_for_deletion' options

2008/05/15 (thomasb)
----------
- Make IMAP auth type configurable (#1483825)
- Fix empty values with FROM_UNIXTIME() in rcube_mdb2 (#1485055)

2008/05/15 (alec)
----------
- Fix attachment list on IE 6/7 (#1484807)

2008/05/12 (estadtherr)
----------
- fix JavaScript in compose.html that shows cc/bcc fields if populated

2008/05/12 (alec)
----------
- Updated PEAR::DB package to version 1.7.13

2008/05/10 (alec)
----------
- Make password input fields of type password in installer (#1484886)

2008/05/09 (alec)
----------
- Don't call CAPABILITY if was recieved as server's optional response 
  on connect (RFC3501 [7.1]) 

2008/05/08 (alec)
----------
- Don't attempt to delete cache entries if enable_caching is FALSE (#1485051)
- Optimized messages sorting on servers without sort capability (#1485049)
- Option 'use_SQL_address_book' replaced by 'address_book_type'
- Corrected message headers decoding when charset isn't specified and improved
  support for native languages (#1485050, #1485048)

2008/05/07 (davidke/richs)
----------
- Completed LDAP address book support so it can now write to an LDAP server. 
- Expanded LDAP configuration options to support LDAP server writes.
- Modified config/main.inc.php.dist:
  New Option: $rcmail_config['use_SQL_address_book']
  Changed Option:  $rcmail_config['ldap_public']['Verisign']

2008/05/05 (alec)
----------
- Installer: encode special characters in DB username/password (#1485042)
- Do charset conversion also for from/to column on messages list